add more outlines/TODOs

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -154,11 +154,23 @@ Therefore, a total $2\text{Mbps} + 2 \cdot 0,56 \text{Mbps} + \text{TODO: FTP} =
 
 TODO: einzelne Abschnitte \& Idee dahinter beschreiben
 
-\section{Simulation Results}
-TODO
+\subsection{Network with CCTV}
+\subsection{Network without CCTV}
+
+\section{Simulation Evaluation}
+TODO: answer (for with/without CCTV, I guess):\\
+• What is the average data rate of the FTP upload?\\
+• What are the average download rates of the HTTP clients?\\
+• How do the other applications influence the video call?\\
+• Is the direct radio link rate sufficient? Is it required to pause the CCTV service during the video conference?\\
+• Where are the main bottlenecks of each variant?\\
+• Which further changes would you suggest to improve the QoS for the video call?\\
+
+\subsection{Network with CCTV}
+\subsection{Network without CCTV}
 
 \section{Recommended Changes To The Network}
-TODO: are there any thing we'd recommend to be changed based on our simulations?
+TODO: are there any things we'd recommend to be changed based on our simulations?
 
 \section{Conclusion}
 TODO
@@ -168,9 +180,15 @@ TODO
 %----------------------------------------------------------------------------------------
 \newpage
 
+\section{Distribution of tasks}
+
+TODO: Aufgabenverteilung aufschlüsseln
+
+
 \listoffigures % Print the list of figures
 
 \listoftables % Print the list of tables
+
 
 %----------------------------------------------------------------------------------------
 %   BIBLIOGRAPHY (if any)
