--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -102,12 +102,20 @@ To model the size of the HTTP responses, the given trace file was analyzed in or
 \end{figure}
 
 After plotting the frequency of packet sizes found in the trace file (see Fig. \ref{fig:first_plot}), it was assumed that either a Poisson- or an exponential distribution could be a suitable theoretical distribution. The overall mean of the trace data is 671539.
-Using Pearson's $\chi^2$ goodness of fit test, it was determined that, when using an exponential distribution with mean 671539, the null hypothesis can be rejected with a 95\% confidence level:
+Using Pearson's $\chi^2$ goodness of fit test, it was determined that, when using an exponential distribution with mean 671539, the null hypothesis can be rejected with a 95\% confidence level:\\
 
 % TODO: zahlen (interval number, interval size) genauer begründen?
-First, the sample data was divided into 100 intervals, where intervals with $\leq 15$ values were merged with their neighboring interval until the resulting interval contained at more than 15 values.
+First, the sample data was divided into 100 intervals, where intervals with $\leq 5$ values were merged with their neighboring interval until the resulting interval contained more than 5 values, resulting in $k = 45$ intervals of observed data at the end.\\
 
-% TODO: add actual chi square value calc
+Then, Pearson's $\chi^2$ test for goodness of fit $\chi^2 = \sum \frac{(Observed - Expected)^2}{Expected}$ was performed for both the Poisson and exponential distribution. In both cases, $\lambda = 671539$ was used as the function's input value.\\
+
+\textbf{For the exponential distribution,} the resulting values were
+\begin{align*}
+\chi^2 &= 61.1437\\
+\text{p-value} &= 0.0222
+\end{align*}
+leading to a rejection of the null hypothesis as $p < \alpha = 0.05$.\\
+\textbf{For the Poisson distribution,} $\chi^2 = 9.3751 \cdot e^{20}$, suggesting that it is not a good fit.\\
 
 This suggests that the exponential distribution is suitable to generate HTTP response sizes during the simulation.
 
