rename traffic modelling section

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -106,7 +106,7 @@ The size of the file uploaded using FTP is assumed to be endless, that is: the f
 
 In order to conduct a meaningful simulation, a few configurations and calculations had to be made. In the following, these calculations, their results and the resulting network setup will be described.
 
-\subsection{Traffic modeling}
+\subsection{HTTP Traffic modeling}
 %TODO: Chi square stuff
 
 To model the size of the HTTP responses, the given trace file was analyzed in order to find a probability distribution that represents their data well.
