--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -125,7 +125,7 @@ For a detailed list of specific configuration parameters, see section \ref{sec:c
 \multicolumn{2}{ l }{\textbf{Web browsing application}} \\
 \hline
   HTTP request length  & 8 KiB \\
-  HTTP response length & exponential($\lambda = 671539$) [see section \ref{subsec:traffic_mod}] \\
+  HTTP response length & exponential($\mu = 671539$) [see section \ref{subsec:traffic_mod}] \\
   Idle interval        & exponential(20s) \\
 \multicolumn{2}{ l }{\textbf{CCTV application}} \\
 \hline
@@ -219,7 +219,7 @@ The professor's bidirectional RTP over UDP video conference generates a bit rate
 
 Where the 1400B packet size are 1388 B payload + 12 B minimal RTP header.\\
 
-In conclusion, a total $2\text{Mbps} + 2 \cdot 0,56 \text{Mbps} = 2,56 \text{Mbps}$ of bandwidth are used constantly.
+In conclusion, a total $2\text{Mbps} + 2 \cdot 0,56 \text{Mbps} = 2,56 \text{Mbps}$ of the point-to-point radio link's bandwidth are used constantly.
 
 \subsubsection{FTP upload bit rate}
 Since the FTP file transfer is a bulk upload rather than a continuous data stream, its bandwidth usage is not constant. Using TCP's congestion avoidance algorithms, the TCP connection taking care of the transfer will attempt to use as much of the available bandwidth as possible (until collisions occur). Therefore, the FTP traffic is not part of the network's baseline traffic.
