--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -238,11 +238,11 @@ The first parameter to look at is the amount of web browsing clients. We expect 
 The second part is the CCTV. To determine the influence of the CCTV on the network performance, we either include or exclude the CCTV from the simulation.
 
 To determine the maximum number of clients to simulate, we looked at the scenario itself. An amount of 60 clients is a reasonable amount of students to be present in a $400m^{2}$ area and surfing at the same time, if the lecture requires web research. To analyze the network thoroughly though, we need to make sure that the behavior with more clients does not change significantly. We found that it is not expected, that the behavior of the system changes significantly at a higher amount of clients, so we are able to extrapolate several network properties from the simulation results.
-To be able to extrapolate properly, we need to determine the incrementation of the amount of clients aswell. To receive a well formed graph, we should work with a low increment, when the network behavior changes significantly. At low numbers, the traffic share is higher, therefore we need a low increment. At higher numbers we can increase it. The resulting numbers of clients we simulated are:
+To be able to extrapolate properly, we need to determine the incrementation of the amount of clients as well. To receive a well formed graph, we should work with a low increment, when the network behavior changes significantly. At low numbers, the traffic share is higher, therefore we need a low increment. At higher numbers we can increase it. The resulting numbers of clients we simulated are:
 \begin{align*}
 N \in \{1,5,10,15,20,30,40,50,60\}
 \end{align*}
-To find a suitable duration of the simulation, we need to examine the behavior over time. We identified the browsing clients as the only application, whose behavior is depending on time. The mean time between HTTP requests is 20 seconds and it is exponentially distributed. The mean reply length is 671539 bytes and it is exponentially distributed aswell. To get good results, we should include a high range of possible values in the simulation time. To calculate a reasonable expected highest value to take into account, we used the CDF of the exponential distribution:
+To find a suitable duration of the simulation, we need to examine the behavior over time. We identified the browsing clients as the only application, whose behavior is depending on time. The mean time between HTTP requests is 20 seconds and it is exponentially distributed. The mean reply length is 671539 bytes and it is exponentially distributed as well. To get good results, we should include a high range of possible values in the simulation time. To calculate a reasonable expected highest value to take into account, we used the CDF of the exponential distribution:
 \begin{align*}
 y = 1-e^{-{\frac{1}{\mu}x}}
 \end{align*}
@@ -253,29 +253,29 @@ If we want to include 0.95\% of the random values, we need to calculate the uppe
 \begin{align*}
 {-ln(0.05)} * 20s \approx 60s
 \end{align*}
-Our simulation showed, that the throughput for 60 clients goes down to 80000 bps. The expected time from simulation start to the end of the first request is therefore: 
+Our simulation showed, that the throughput for 60 clients goes down to 80000 bps. The expected time from simulation start to the end of the first request is therefore:
 \begin{align*}
 \frac{8\frac{b}{B} * 2MB}{80000 bps} + 60s = 260s
 \end{align*}
 To allow more of these requests, we set the maximum simulation time to 1000 seconds.
 
-Throughout the simulation, we looked at the confidence intervals of several averaged values. We found that a repitition of 15 for each simulation combination produces a sufficient confidence level. 
+Throughout the simulation, we looked at the confidence intervals of several averaged values. We found that a repetition of 15 for each simulation combination produces a sufficient confidence level.
 
-For the final simulation we end up with 9 different client and 2 CCTV settings. Resulting in 270 simulation runs with a simulation duration of 1000 seconds.  
+For the final simulation we end up with 9 different client and 2 CCTV settings, resulting in 270 simulation runs with a simulation duration of 1000 seconds.
 
 \subsection{Performance Characteristics}
 In the previous section we determined changing parameters between the simulation runs. The performance characteristics are the simulation measurements influenced by those parameters. The overall procedure is to record the measurements for every combination of parameters several times. Thus we have a set of 15 measurements for each combination. This allows us to calculate confidence intervals for each measurement. In the following we identify the performance characteristics of the implemented applications.
 
 \subsubsection{Video Conference}
-The video conference is based on UDP. Therefore packets can be dropped by the network permanently, reducing the quality of service. Additionally packets can be delayed. If a packet arrives too late, it can't contribute to the video stream anymore and is thus considered lost. The limit for the packet delay is 100 ms. If the packet loss rate is higher than 5\%, the quality of the video conference is considered to be too bad. Thus the crucial characteristic to look at is the average packet loss rate of the video conference in both directions. 
-Another characteristic is the average delay. Although you could expect it to be below 100 ms, when the average packet loss rate is sufficient, it is still an important value to rate the quality of service. 
+The video conference is based on UDP. Therefore packets can be dropped by the network permanently, reducing the quality of service. Additionally packets can be delayed. If a packet arrives too late, it can't contribute to the video stream anymore and is thus considered lost. The limit for the packet delay is 100 ms. If the packet loss rate is higher than 5\%, the quality of the video conference is considered to be too bad. Thus the crucial characteristic to look at is the average packet loss rate of the video conference in both directions.
+Another characteristic is the average delay. Although you could expect it to be below 100 ms, when the average packet loss rate is sufficient, it is still an important value to rate the quality of service.
 \begin{align*}
 \frac{\text{<lost packets>} + \text{<discarded packets>}}{\text{<sent packets>}}
 \end{align*}
 TODO: formula
 TODO: packet loss bursts? -> Packet loss over time
 \subsubsection{Web Browsing}
-The web browsing follows a simple request response model. The requests are carried out in a single session each. The important characteristic is how long the user has to wait until a response arrives. The response time is depending on the length of the response. For a greater length the user can cope with a longer response time. Therefore the crucial characteristic is the throughput the web client actually achieves. 
+The web browsing follows a simple request response model. The requests are carried out in a single session each. The important characteristic is how long the user has to wait until a response arrives. The response time is depending on the length of the response. For a greater length the user can cope with a longer response time. Therefore the crucial characteristic is the throughput the web client actually achieves.
 It is possible to measure the average throughput of the web clients. But this value is misleading, since the browsers do not use the medium at all times. To address this issue we measured the fraction of the simulation time a session was active. The calculation of the final throughput is thus:
 \begin{align*}
 \sum_{i=1}^{N}\frac{r_{i}}{f_{i} * T}, \\
@@ -285,7 +285,7 @@ f &= \text{fraction of the overall time,} \\
 T &= \text{overall simulation time}
 \end{align*}
 To estimate the average response time, we can then further divide the average response length by the just acquired value.
-Todays response times for common home networks are usually below 5 seconds. If students are at the university slightly higher response times can be considered acceptable. Therefore you can say that it is okay to wait for a response for 10 seconds. 
+Todays response times for common home networks are usually below 5 seconds. If students are at the university slightly higher response times can be considered acceptable. Therefore you can say that it is okay to wait for a response for 10 seconds.
 
 \subsubsection{FTP Upload}
 The FTP Upload is modeled as a continous TCP stream to the internet. It runs for the entire simulation. The only important characteristic is the average throughput. The user is just interested in the time the upload takes. We measured the average throughput by the total amount of bytes uploaded to the server divided by the simulation time.
@@ -294,21 +294,21 @@ The FTP Upload is modeled as a continous TCP stream to the internet. It runs for
 \end{align*}
 
 \subsubsection{CCTV}
-The CCTV is used to monitor abnormal behavior at the remote campus. There are two characteristics, which can be considered. At first the delay of stream increases the reaction time of the staff. If the information arrives at the monitor one second late, it does not influence the reaction time of the staff in a significant way. Therefore it is neglectable. 
-As for the conference the average packet loss rate influences the quality of the video stream. If the packet loss rate is higher as 5\% the video stream is considered not be recognizable anymore. Therefore the packet loss rate should not exceed 5\%.
+The CCTV is used to monitor abnormal behavior at the remote campus. There are two characteristics, which can be considered. At first the delay of stream increases the reaction time of the staff. If the information arrives at the monitor one second late, it does not influence the reaction time of the staff in a significant way. Therefore it is neglectable.
+As for the conference the average packet loss rate influences the quality of the video stream. If the packet loss rate is higher as 5\% the video stream is considered to not be recognizable anymore. Therefore the packet loss rate should not exceed 5\%.
 
 TODO: Ist der Stream ab 5\% wirklich nicht mehr zu gebrauchen?
 \subsection{Bottleneck Identification}
-Besides looking at the performance characteristics of the application, it is advisable to look at potential bottlenecks. We identified the wireless network at the remote campus and the radio link between the remote campus and the main campus as potential bottlenecks. The theoretical maximum bandwidth of 56 Mbps of the wireless network and a 12 Mbps bandwidth of the radio link are much higher than the bandwidths of the remaining links. Thus it is not necessary to evaluate those.
+Besides looking at the performance characteristics of the applications, it is advisable to look at potential bottlenecks. We identified the wireless network at the remote campus and the radio link between the remote campus and the main campus as potential bottlenecks. The theoretical maximum bandwidth of 56 Mbps of the wireless network and a 12 Mbps bandwidth of the radio link are much higher than the bandwidths of the remaining links. Thus it is not necessary to evaluate those.
 
 \subsubsection{Radio Link}
-To evaluate the radio link two different characteristics are relevant. It is useful to determine how much bandwidth of the link is unused. Therefore we need to measure the average throughput. To receive even more information, we can look at the throughputs in each direction of the link. So we can identify the potential application, which is causing the traffic. 
-In case the link is indeed a bottleneck, it is necessary to collect data about the packet drop rate. When the link is overloaded, the packets will be hold in a queue. When this queue is full. Incoming packets are dropped. We can use this drop rate to determine, if the link is a bottleneck.
-Since our applications require a sufficient packet delay, it is also useful to record the average queueing delay, to evaluate the influence of the link on the streaming delays.
+To evaluate the radio link two different characteristics are relevant. It is useful to determine how much bandwidth of the link is unused. Therefore we need to measure the average throughput. To receive even more information, we can look at the throughputs in each direction of the link. So we can identify the potential application, which is causing the traffic.
+In case the link is indeed a bottleneck, it is necessary to collect data about the packet drop rate. When the link is overloaded, the packets will be held in a queue. When this queue is full, incoming packets are dropped. We can use this drop rate to determine if the link is a bottleneck.
+Since our applications require a sufficiently short packet delay, it is also useful to record the average queueing delay, to evaluate the influence of the link on the streaming delays.
 All of these measurements can be done at the remote router and main router to distinct between traffic directions.
 
 \subsubsection{Wireless Network}
-The practical throughput of a wireless network is much lower than the advertised theoretical maximum. This is due to collisions on the channel. So the wireless network can still be considered as a potential bottleneck, while its theoretical maximum bandwidth 56 Mbps is much higher than the 12Mbps of the radiolink. To evaluate the wireless network channel, the same statistics as of the radio link can be considered. 
+The practical throughput of a wireless network is much lower than the advertised theoretical maximum. This is due to collisions on the channel. So the wireless network can still be considered as a potential bottleneck, while its theoretical maximum bandwidth 56 Mbps is much higher than the 12Mbps of the radiolink. To evaluate the wireless network channel, the same statistics as of the radio link can be considered.
 Additionally it is useful to look at the number of collisions to have a good metric to assess the issues caused by the channel.
 
 \section{Simulation Evaluation}
