add packet loss rate to network config table

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -147,7 +147,9 @@ For a detailed list of specific configuration parameters, see section \ref{sec:c
   VDSL bandwidth                & 100 Mbit/s \\
   VDSL delay                    & Internet: 30 ms \\
                                 & CCTV Monitoring: 0 ms \\
-  DFN bandwidth \& delay        & 100 Mbit/s, 5 ms
+  DFN bandwidth \& delay        & 100 Mbit/s, 5 ms \\
+  Maximum packet loss rate      & 5 \% \\
+  (video conference \& CCTV)    & \\
 \end{tabularx}
 \caption{Network configuration parameters}
 \label{table:app_config}
