10 seconds acceptable für 1 provisorium

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -287,7 +287,7 @@ f &= \text{fraction of the overall time,} \\
 T &= \text{overall simulation time}
 \end{align*}
 To estimate the average response time, we can then further divide the average response length by the just acquired value.
-Todays response times for common home networks are usually below 5 seconds. If students are at the university slightly higher response times can be considered acceptable. Therefore you can say that it is okay to wait for a response for 10 seconds.
+Todays response times for common home networks are usually below 5 seconds. For a temporary back-up solution such as the network at hand slightly higher response times can be considered acceptable. Therefore you can say that it is okay to wait for a response for 10 seconds.
 
 \subsubsection{FTP Upload}
 The FTP Upload is modeled as a continous TCP stream to the internet. It runs for the entire simulation. The only important characteristic is the average throughput. The user is just interested in the time the upload takes. We measured the average throughput by the total amount of bytes uploaded to the server divided by the simulation time.
