--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -208,7 +208,7 @@ When sending packets of 10 kB of CCTV data every 40 ms, a bit rate of 2 megabits
 
 \begin{align*}
 \text{number of packets per second} &\cdot \text{packet size} = \text{bit rate}\\
-\frac{1000ms}{40ms} &\cdot 10kB \cdot 8 = 2Mbps
+\frac{1000ms}{40ms} &\cdot 10kB \cdot 8 bit = 2Mbps
 \end{align*}
 
 \subsubsection{Video conference bit rate}
@@ -216,7 +216,7 @@ The professor's bidirectional RTP over UDP video conference generates a bit rate
 
 \begin{align*}
 \text{number of packets per second} &\cdot \text{packet size} = \text{bit rate}\\
-\frac{1000ms}{40ms} &\cdot 1400B \cdot 8 = 0,28 Mbps
+\frac{1000ms}{40ms} &\cdot 1400B \cdot 8 bit = 0,28 Mbps
 \end{align*}
 
 Where the 1400B packet size are 1388 B payload + 12 B minimal RTP header.\\
