mention chi^2 script in footnotes

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -185,7 +185,7 @@ Using Pearson's $\chi^2$ goodness of fit test, it was determined that, when usin
 % TODO: zahlen (interval number, interval size) genauer begründen?
 First, the sample data was divided into 100 intervals, where intervals with $\leq 5$ values were merged with their neighboring interval until the resulting interval contained more than 5 values, resulting in $k = 45$ intervals of observed data at the end.\\
 
-Then, Pearson's $\chi^2$ test for goodness of fit $\chi^2 = \sum \frac{(Observed - Expected)^2}{Expected}$ was performed for both the Poisson and exponential distribution. In both cases, $\lambda = 671539$ was used as the function's input value.\\
+Then, Pearson's $\chi^2$ test for goodness of fit $\chi^2 = \sum \frac{(Observed - Expected)^2}{Expected}$ was performed for both the Poisson and exponential distribution\footnote{This was done using the Matlab script \texttt{ChiSquareTrace.m} which can be found among the files submitted with this report}. In both cases, $\lambda = 671539$ was used as the function's input value.\\
 
 \textbf{For the exponential distribution,} the resulting values were
 \begin{align*}
