Add makeshift Terminology section/glossary

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -341,13 +341,17 @@ TODO
 \newpage
 
 \section{Distribution of tasks}
-
 TODO: Aufgabenverteilung aufschlüsseln
 
-simulation parameters: paramaters changed between simulation runs
-performance characteristics: measurements of the evaluation
-response time: time between browser request and fully received response
-CDF: Cumulative distribution function
+\section{Terminology}
+% this is not how it's done properly, but I don't want to fight with latex anymore right now...
+\begin{description}
+\item[Simulation parameters] Parameters changed between simulation runs
+\item[Performance characteristics] Measurements of the evaluation
+\item[response time] Time between browser request and fully received response
+\item[CDF] Cumulative distribution function
+\end{description}
+
 \listoffigures % Print the list of figures
 
 \listoftables % Print the list of tables
