add network picture

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -92,8 +92,8 @@ TODO!
 
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=\textwidth]{Figures/trace_plot.png}
-  \caption{The Network Setup as simulated. TODO: add actual image!!} \label{fig:network}
+  \includegraphics[width=\textwidth]{Figures/network.pdf}
+  \caption{The Network Setup as simulated.} \label{fig:network}
 \end{figure}
 
 To analyze the desired network setup, simulations were conducted. The simulated network was set up as illustrated in fig. \ref{fig:network}. The following section discusses the implementation of the simulation and its configurations.
