add general structure

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -326,9 +326,11 @@ TODO: answer (for with/without CCTV, I guess):\\
 
 
 \subsection{Network without CCTV}
-As a second measure, the same simulations were conducted without any CCTV traffic.
+As a second measure, the same simulations were conducted without any CCTV infrastructure present.
 
 \subsubsection{General observations}
+To gain an overview over the network's behavior, it useful that we first familiarize ourselves with its general behavior.
+
 
 \subsubsection{Application influence on video quality}
 
