add general structure

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -326,6 +326,21 @@ TODO: answer (for with/without CCTV, I guess):\\
 
 
 \subsection{Network without CCTV}
+As a second measure, the same simulations were conducted without any CCTV traffic.
+
+\subsubsection{General observations}
+
+\subsubsection{Application influence on video quality}
+
+\subsubsection{Maxmimum number of web browsing clients}
+bevor video conf gefährdet ist bzw bis studi browsing erlebnis unbrauchbar ist
+   3.2 was die bottlenecks sind (wann, wo?), ob PPP eins davon ist
+
+\subsubsection{Identified bottlenecks}
+
+\subsubsection{QoS improvement suggestions}
+ wie kann man die vieo QoS verbessern, wie die browsing QoS?
+
 
 \section{Recommended Changes To The Network}
 TODO: are there any things we'd recommend to be changed based on our simulations?
