--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -329,7 +329,18 @@ TODO: answer (for with/without CCTV, I guess):\\
 As a second measure, the same simulations were conducted without any CCTV infrastructure present.
 
 \subsubsection{General observations}
-To gain an overview over the network's behavior, it useful that we first familiarize ourselves with its general behavior.
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=\textwidth]{../matlab/images/finalnocctv/Application Throughputs.png}
+  \caption{Throughput of the FTP and web browsing applications} \label{fig:app_throughput}
+\end{figure}
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=\textwidth]{../matlab/images/finalnocctv/Application Throughputs.png}
+  \caption{Throughput of the FTP and web browsing applications} \label{fig:app_throughput}
+\end{figure}
+
+\paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the overall HTTP traffic throughput rises with the number of web browsing clients, the throughput achieved per browser, demoted as ``Single HTTP throughput'' decreases.
 
 
 \subsubsection{Application influence on video quality}
